# man-pages-pl

./: Makefile  README.md  man-pages-pl.spec
src/: .#ChangeLog.1.1  AUTHORS  CHANGELOG  COPYRIGHT  ChangeLog  FAQ  Makefile  Makefile.am  README  TODO  at.links  autogen.sh  bsdgames.links  configure.in  e2fsprogs.links  groff.links  iputils-ping.links  kmod.links  libpam-runtime.links  makewhatis  ncurses-bin.links  psmisc.links  quota.links  readme.english  slownik  sysvinit-utils.links  whatis  zsh.links
src/CVS/: Entries  Repository
src/debian/: .cvsignore  changelog  control  copyright  dirs  install.sh  manpages-pl-dev.install  manpages-pl-dev.postinst  manpages-pl.docs  manpages-pl.install  manpages-pl.links  manpages-pl.postinst  move.list  preinst  rules  source.lintian-overrides
src/debian/CVS/: Entries  Repository
src/debian/man1/: 822-date.1  md5sum.1  sensible-browser.1  sensible-editor.1
src/debian/man5/: polish.5
src/debian/man7/: undocumented.7
src/debian/man8/: addgroup.8  adduser.8  rpm.8  start-stop-daemon.8  update-modules.8  update-rc.d.8
src/info/: bc.texi  dc.texi  diffutils.texi  fdl-1.1.texi  fileutils.texi  find.texi  gawk.texi  getdate.texi  gpl-2.texi  grep.texi  included  perm.texi  sample.wgetrc.munged_for_texi_inclusion  textutils.texi  wdiff.texi  wget.texi
src/info/CVS/: Entries  Repository
src/licenses/: BSD-3-clause  BSD-4-clause  GFDL-1.1  MIT-Open group  Prior BSD  cron
src/man0p/CVS/: Repository
src/man1/: Makefile.am  ac.1  access.1  alien.1  alien.1p  apropos.1  ar.1  as.1  ascii-xfr.1  at.1  atrm.1  basename.1  bash.1  bc.1  biff.1  bison.1  bsd-mailx.1  bsd-write.1  bunzip2.1  byacc.1  bzip2.1  bzip2recover.1  cal.1  cancel.1  captoinfo.1  captoinfo.1m  cat.1  chattr.1  checkalias.1  chfn.1  chgrp.1  chmod.1  chown.1  chroot.1  chsh.1  cjpeg.1  cksum.1  cmp.1  col.1  colcrt.1  (+329 more)
src/man1/CVS/: Entries  Repository
src/man1p/CVS/: Repository
src/man2/: FD_ISSET.2  Makefile.am  _exit.2  _llseek.2  _sysctl.2  accept.2  access.2  acct.2  adjtimex.2  afs_syscall.2  alarm.2  bdflush.2  bind.2  brk.2  cacheflush.2  chdir.2  chmod.2  chown.2  chroot.2  clone.2  close.2  connect.2  creat.2  create_module.2  delete_module.2  dup.2  dup2.2  execve.2  exit.2  fchdir.2  fchmod.2  fcntl.2  fdatasync.2  flock.2  fork.2  fstatfs.2  fsync.2  ftruncate.2  get_kernel_syms.2  getdents.2  (+108 more)
src/man2/CVS/: Entries  Repository
src/man3/: CMSG_NXTHDR.3  MB_CUR_MAX.3  MB_LEN_MAX.3  Makefile.am  Tcl.3tcl  __setfpucw.3  abort.3  abs.3  acos.3  acosh.3  acoshf.3  acosl.3  alloca.3  alphasort.3  asin.3  asinf.3  asinh.3  asinhf.3  assert.3  atan.3  atan2.3  atan2l.3  atanf.3  atanh.3  atanhf.3  atexit.3  atof.3  atoi.3  atol.3  basename.3  bcmp.3  bcopy.3  bindresvport.3  bsearch.3  bstring.3  btowc.3  btree.3  byteorder.3  bzero.3  catclose.3  (+245 more)
src/man3/CVS/: Entries  Repository
src/man3p/CVS/: Repository  Root
src/man4/: Makefile.am  console.4  console_codes.4  console_ioctl.4  fd.4  full.4  hd.4  intro.4  ipfw.4  kmem.4  lp.4  mem.4  mouse.4  null.4  ram.4  random.4  sd.4  st.4  tty.4  ttyS.4  urandom.4  vcs.4  vcsa.4  zero.4
src/man4/CVS/: Entries  Repository
src/man5/: Makefile.am  acct.5  aliases.5  at_allow.5  at_deny.5  config.5ssl  crontab.5  dot-qmail.5  environ.5  exports.5  fs.5  fstab.5  ftpusers.5  group.5  initscript.5  inittab.5  intro.5  ipc.5  issue.5  issue.net.5  keymaps.5  keytables.5  lilo.conf.5  limits.5  lisp-tut.5  locale.5  locatedb.5  magic.5  maildir.5  man.config.5  manpath.5  mbox.5  motd.5  mtools.5  nfs.5  nologin.5  pbm.5  pgm.5  pnm.5  ppm.5  (+20 more)
src/man5/CVS/: Entries  Repository
src/man6/: Makefile.am  intro.6  koules.6  trek.6  vgatest.6
src/man6/CVS/: Entries  Repository
src/man7/: Makefile.am  arp.7  ascii.7  bootparam.7  hier.7  intro.7  ip.7  iso-8859-16.7  iso-8859-7.7  iso_8859-1.7  iso_8859-15.7  iso_8859-16.7  iso_8859-2.7  iso_8859-7.7  iso_8859-9.7  iso_8859_1.7  iso_8859_2.7  iso_8859_9.7  koi8-r.7  latin9.7  locale.7  mailaddr.7  man.7  me.7  qmail.7  samba.7  signal.7  suffixes.7  term.7  udp.7  unicode.7  units.7  unix.7  utf-8.7  utf8.7  x25.7
src/man7/CVS/: Entries  Repository
src/man8/: .#Makefile.am.1.5  MAKEDEV.8  Makefile.am  Makefile.am~  apt-cache.8  apt-cache.8r  apt-cdrom.8  apt-cdrom.8r  apt-get.8  apt-get.8r  apt.8  apt.8r  atd.8  atrun.8  autoexecd.8  autolog.8  badblocks.8  catman.8  chat.8  chpasswd.8  clock.8  convertquota.8  cron.8  ctrlaltdel.8  debugfs.8  depmod.8  dmesg.8  dosfsck.8  dpasswd.8  dpkg-query.8  dpkg-split.8  dpkg.8  dselect.8  dumpe2fs.8  e2fsck.8  e2label.8  edquota.8  faillog.8  fdformat.8  fdisk.8  (+122 more)
src/man8/CVS/: Entries  Repository
src/man9/: Makefile.am  kfree.9  kmalloc.9  skel.9
src/man9/CVS/: Entries  Repository
src/mann/: Makefile.am  Tcl.n  expr.n
src/mann/CVS/: Entries  Repository
src/po/man1/: ac.1.po  arch.1.po  at.1.po  base64.1.po  basename.1.po  bash.1.po  cat.1.po  chcon.1.po  chgrp.1.po  chkdupexe.1.po  chmod.1.po  chown.1.po  cksum.1.po  clear.1.po  comm.1.po  cp.1.po  csplit.1.po  cut.1.po  date.1.po  dd.1.po  df.1.po  dir.1.po  dircolors.1.po  dirname.1.po  dmesg.1.po  du.1.po  echo.1.po  env.1.po  expand.1.po  expr.1.po  factor.1.po  false.1.po  fmt.1.po  fold.1.po  formail.1.po  grep.1.po  groups.1.po  head.1.po  hostid.1.po  hostname.1.po  (+81 more)
src/po/man2/: exit_group.2.po  intro.2.po  readv.2.po  reboot.2.po  select.2.po  setresuid.2.po  sigaction.2.po  stat.2.po  times.2.po  write.2.po
src/po/man3/: INFINITY.3.po  cabs.3.po  cacos.3.po  canonicalize_file_name.3.po  ccos.3.po  ccosh.3.po  cexp.3.po  cimag.3.po  conj.3.po  cpow.3.po  creal.3.po  csin.3.po  csinh.3.po  ctan.3.po  ctanh.3.po  fdim.3.po  fmax.3.po  fmin.3.po  getline.3.po  getnameinfo.3.po  getumask.3.po  getutent.3.po  intro.3.po  sysconf.3.po  undocumented.3.po  unlocked_stdio.3.po  usleep.3.po
src/po/man4/: console_codes.4.po  console_ioctl.4.po  fd.4.po  full.4.po  hd.4.po  intro.4.po  lp.4.po  mem.4.po  mouse.4.po  null.4.po  ram.4.po  random.4.po  sd.4.po  st.4.po  (+3 more)
src/zasoby/: .cvsignore  add2ptm  pakiet  robotnicy  wskazowki.tlumacza
(+146 files in other folders)
