
mandir = @mandir@/pl
man_MANS = \
	ac.1 \
	access.1 \
	alien.1 \
	apropos.1 \
	ar.1 \
	arch.1 \
	as.1 \
	ascii-xfr.1 \
	at.1 \
	atq.1 \
	atrm.1 \
	awk.1 \
	basename.1 \
	bash.1 \
	batch.1 \
	bc.1 \
	biff.1 \
	bison.1 \
	BitchX.1 \
	bunzip2.1 \
	byacc.1 \
	bzcat.1 \
	bzip2.1 \
	cal.1 \
	cancel.1 \
	captoinfo.1m \
	cat.1 \
	chattr.1 \
	checkalias.1 \
	chfn.1 \
	chgrp.1 \
	chkdupexe.1 \
	chmod.1 \
	chown.1 \
	chroot.1 \
	chsh.1 \
	cjpeg.1 \
	cksum.1 \
	clear.1 \
	cmp.1 \
	col.1 \
	colcrt.1 \
	colrm.1 \
	comm.1 \
	compress.1 \
	config.1 \
	configure.1 \
	cp.1 \
	crontab.1 \
	csplit.1 \
	cut.1 \
	date.1 \
	dc.1 \
	dd.1 \
	depmod.1 \
	df.1 \
	dialog.1 \
	diff.1 \
	diff3.1 \
	dir.1 \
	dircolors.1 \
	dirname.1 \
	djpeg.1 \
	dnsdomainname.1 \
	dnskeygen.1 \
	domainname.1 \
	dos.1 \
	dosdebug.1 \
	dosexec.1 \
	dpkg-deb.1 \
	du.1 \
	dumpkeys.1 \
	dxpc.1 \
	echo.1 \
	ed.1 \
	egrep.1 \
	eject.1 \
	env.1 \
	eview.1 \
	evim.1 \
	ex.1 \
	expand.1 \
	expiry.1 \
	expr.1 \
	f77.1 \
	factor.1 \
	false.1 \
	fgrep.1 \
	file.1 \
	fileutils.1 \
	find.1 \
	finger.1 \
	flex.1 \
	fmt.1 \
	fold.1 \
	formail.1 \
	forward.1q \
	free.1 \
	frm.1 \
	ftp.1 \
	fuser.1 \
	gawk.1 \
	gdb.1 \
	gendiff.1 \
	getfilename.1 \
	getlist.1 \
	getopt.1 \
	gpasswd.1 \
	grep.1 \
	groff.1 \
	groups.1 \
	gs.1 \
	gunzip.1 \
	gview.1 \
	gvim.1 \
	gvimdiff.1 \
	gzexe.1 \
	gzip.1 \
	head.1 \
	hexdump.1 \
	hman.1 \
	host.1 \
	hostid.1 \
	hostname.1 \
	hostname.1a \
	hx.1 \
	id.1 \
	igawk.1 \
	info.1 \
	insmod.1 \
	install.1 \
	intro.1 \
	jed.1 \
	joe.1 \
	join.1 \
	kbd_mode.1 \
	kernelversion.1 \
	kill.1 \
	killall.1 \
	ksh.1 \
	last.1 \
	lastb.1 \
	latex.1 \
	lbxproxy.1x \
	ldd.1 \
	less.1 \
	lesskey.1 \
	lftpget.1 \
	licq.1 \
	links.1 \
	ln.1 \
	loadkeys.1 \
	locate.1 \
	logger.1 \
	login.1 \
	logname.1 \
	look.1 \
	lp.1 \
	lpbanner.1 \
	lpf.1 \
	lpq.1 \
	lpr.1 \
	lpr.1a \
	lpraccnt.1 \
	lprm.1 \
	lprm.1a \
	lpstat.1 \
	lptest.1a \
	ls.1 \
	lsattr.1 \
	lsmod.1 \
	lynx.1 \
	mail.1 \
	mailq.1 \
	mailx.1 \
	make.1 \
	man.1 \
	man2html.1 \
	manpath.1 \
	mattrib.1 \
	mawk.1 \
	mbadblocks.1 \
	mc.1 \
	mcat.1 \
	mcd.1 \
	mcedit.1 \
	mcopy.1 \
	md5sum.1 \
	mdel.1 \
	mdeltree.1 \
	mdir.1 \
	mdu.1 \
	merge.1 \
	mesg.1 \
	metamail.1 \
	mformat.1 \
	minfo.1 \
	mkdir.1 \
	mkfifo.1 \
	mkmanifest.1 \
	mknod.1 \
	mktemp.1 \
	mlabel.1 \
	mmd.1 \
	mmount.1 \
	mmove.1 \
	modprobe.1 \
	monitor.1 \
	more.1 \
	mpartition.1 \
	mrd.1 \
	mren.1 \
	mshowfat.1 \
	mt.1 \
	mtools.1 \
	mtoolstest.1 \
	mtype.1 \
	mutt.1 \
	mv.1 \
	mzip.1 \
	newer.1 \
	newgrp.1 \
	nfrm.1 \
	nice.1 \
	nisdomainname.1 \
	nl.1 \
	nodename.1 \
	nohup.1 \
	nroff.1 \
	od.1 \
	ogonkify.1 \
	openssl.1 \
	passwd.1 \
	paste.1 \
	patch.1 \
	pathchk.1 \
	pbmtoascii.1 \
	pclbanner.1 \
	perl.1 \
	perldata.1 \
	perlfunc.1 \
	perlop.1 \
	perlref.1 \
	perlsyn.1 \
	pgp.1 \
	pico.1 \
	pine.1 \
	pinky.1 \
	pr.1 \
	printenv.1 \
	printf.1 \
	procmail.1 \
	ps.1 \
	psbanner.1 \
	psbook.1 \
	psmerge.1 \
	psnup.1 \
	psresize.1 \
	psselect.1 \
	pstops.1 \
	pstree.1 \
	ptx.1 \
	pwd.1 \
	quota.1 \
	ranlib.1 \
	red.1 \
	reset.1 \
	rev.1 \
	rgrep.1 \
	rgview.1 \
	rgvim.1 \
	rm.1 \
	rman.1 \
	rmdir.1 \
	rmmod.1 \
	rview.1 \
	rvim.1 \
	scp.1 \
	scp.1.com \
	screen.1 \
	script.1 \
	sdiff.1 \
	sed.1 \
	seq.1 \
	setleds.1 \
	setterm.1 \
	sgml2info.1 \
	sgml2txt.1 \
	shred.1 \
	sh-utils.1 \
	sleep.1 \
	slrn.1 \
	smbclient.1 \
	soelim.1 \
	sort.1 \
	split.1 \
	stat.1 \
	startx.1X \
	strace.1 \
	strings.1 \
	strip.1 \
	stty.1 \
	su.1 \
	sum.1 \
	sync.1 \
	tac.1 \
	tail.1 \
	talk.1 \
	tapeout.1 \
	tar.1 \
	tbl.1 \
	tclsh.1 \
	tee.1 \
	tempfile.1 \
	test.1 \
	textutils.1 \
	top.1 \
	touch.1 \
	tput.1 \
	tr.1 \
	true.1 \
	tset.1 \
	tsort.1 \
	tty.1 \
	ul.1 \
	uname.1 \
	uncompress.1 \
	unexpand.1 \
	uniq.1 \
	unrar.1 \
	updatedb.1 \
	uptime.1 \
	users.1 \
	uucp.1 \
	uux.1 \
	vdir.1 \
	vi.1 \
	view.1 \
	vim.1 \
	vimdiff.1 \
	vimtutor.1 \
	w.1 \
	wall.1 \
	wc.1 \
	wdiff.1 \
	wget.1 \
	whatis.1 \
	whereis.1 \
	which.1 \
	who.1 \
	whoami.1 \
	write.1 \
	xargs.1 \
	xbmtopbm.1 \
	xcopy.1 \
	xdos.1 \
	ximtoppm.1 \
	xinit.1X \
	xpmtoppm.1 \
	xspect.1 \
	xvminitoppm.1 \
	xvpictoppm.1 \
	xwd.1X \
	xwdtopnm.1 \
	yacc.1 \
	ybmtopbm.1 \
	yes.1 \
	ypcat.1 \
	ypdomainname.1 \
	yuvsplittoppm.1 \
	yuvtoppm.1 \
	zcat.1 \
	zcmp.1 \
	zdiff.1 \
	zeisstopnm.1 \
	zforce.1 \
	zgrep.1 \
	zipgrep.1 \
	zless.1 \
	zmore.1 \
	znew.1 \
	zsh.1 \
	zsoelim.1
