
mandir = @mandir@/pl
man_MANS = \
	accept.2 \
	access.2 \
	acct.2 \
	adjtimex.2 \
	afs_syscall.2 \
	alarm.2 \
	bdflush.2 \
	bind.2 \
	break.2 \
	brk.2 \
	cacheflush.2 \
	chdir.2 \
	chmod.2 \
	chown.2 \
	chroot.2 \
	clone.2 \
	close.2 \
	connect.2 \
	creat.2 \
	create_module.2 \
	delete_module.2 \
	dup.2 \
	dup2.2 \
	execve.2 \
	_exit.2 \
	exit.2 \
	_Exit.2 \
	fchdir.2 \
	fchmod.2 \
	fchown.2 \
	fcntl.2 \
	fdatasync.2 \
	FD_CLR.2 \
	FD_ISSET.2 \
	FD_SET.2 \
	FD_ZERO.2 \
	flock.2 \
	fork.2 \
	fstat.2 \
	fstatfs.2 \
	fsync.2 \
	ftruncate.2 \
	getdents.2 \
	getdomainname.2 \
	getdtablesize.2 \
	getegid.2 \
	geteuid.2 \
	getgid.2 \
	getgroups.2 \
	gethostid.2 \
	gethostname.2 \
	getitimer.2 \
	get_kernel_syms.2 \
	getpagesize.2 \
	getpeername.2 \
	getpgid.2 \
	getpgrp.2 \
	getpid.2 \
	getpmsg.2 \
	getppid.2 \
	getpriority.2 \
	getresgid.2 \
	getresuid.2 \
	getrlimit.2 \
	getrusage.2 \
	getsid.2 \
	getsockname.2 \
	getuid.2 \
	gtty.2 \
	idle.2 \
	inb.2 \
	inb_p.2 \
	init_module.2 \
	inl.2 \
	inl_p.2 \
	insb.2 \
	insl.2 \
	insw.2 \
	intro.2 \
	inw.2 \
	inw_p.2 \
	ioctl.2 \
	ioperm.2 \
	iopl.2 \
	ipc.2 \
	kill.2 \
	killpg.2 \
	lchown.2 \
	link.2 \
	_llseek.2 \
	llseek.2 \
	lock.2 \
	lseek.2 \
	lstat.2 \
	mmap.2 \
	mpx.2 \
	msgctl.2 \
	msgget.2 \
	msgop.2 \
	msgrcv.2 \
	msgsnd.2 \
	munmap.2 \
	nanosleep.2 \
	_newselect.2 \
	nfsservctl.2 \
	nice.2 \
	obsolete.2 \
	oldfstat.2 \
	oldlstat.2 \
	oldolduname.2 \
	oldstat.2 \
	olduname.2 \
	open.2 \
	outb.2 \
	outb_p.2 \
	outl.2 \
	outl_p.2 \
	outsb.2 \
	outsl.2 \
	outsw.2 \
	outw.2 \
	outw_p.2 \
	pause.2 \
	pipe.2 \
	prof.2 \
	pselect.2 \
	putpmsg.2 \
	read.2 \
	readdir.2 \
	readlink.2 \
	sbrk.2 \
	sched_getparam.2 \
	sched_get_priority_max.2 \
	sched_get_priority_min.2 \
	sched_getscheduler.2 \
	sched_rr_get_interval.2 \
	sched_setparam.2 \
	sched_setscheduler.2 \
	sched_yield.2 \
	security.2 \
	select.2 \
	semctl.2 \
	semget.2 \
	semop.2 \
	semtimedop.2 \
	setdomainname.2 \
	setgroups.2 \
	sethostid.2 \
	sethostname.2 \
	setitimer.2 \
	setpgid.2 \
	setpgrp.2 \
	setpriority.2 \
	setregid.2 \
	setresgid.2 \
	setresuid.2 \
	setreuid.2 \
	setrlimit.2 \
	sgetmask.2 \
	shmat.2 \
	shmctl.2 \
	shmdt.2 \
	shmget.2 \
	shmop.2 \
	sigaction.2 \
	sigblock.2 \
	siggetmask.2 \
	sigmask.2 \
	signal.2 \
	sigpending.2 \
	sigprocmask.2 \
	sigsetmask.2 \
	sigsuspend.2 \
	ssetmask.2 \
	stat.2 \
	stty.2 \
	symlink.2 \
	sync.2 \
	_sysctl.2 \
	sysctl.2 \
	sysfs.2 \
	sysinfo.2 \
	time.2 \
	truncate.2 \
	umask.2 \
	undocumented.2 \
	unimplemented.2 \
	vm86.2 \
	wait.2 \
	wait3.2 \
	wait4.2 \
	waitpid.2 \
	write.2
