
mandir = @mandir@/pl
man_MANS = \
	abort.3 \
	abs.3 \
	acos.3 \
	acosf.3 \
	acosh.3 \
	acoshf.3 \
	acoshl.3 \
	acosl.3 \
	addmntent.3 \
	alloca.3 \
	alphasort.3 \
	asctime.3 \
	asin.3 \
	asinf.3 \
	asinh.3 \
	asinhf.3 \
	asinhl.3 \
	asinl.3 \
	assert.3 \
	atan2.3 \
	atan2f.3 \
	atan2l.3 \
	atan.3 \
	atanf.3 \
	atanh.3 \
	atanhf.3 \
	atanhl.3 \
	atanl.3 \
	atexit.3 \
	atof.3 \
	atoi.3 \
	atol.3 \
	atoll.3 \
	atoq.3 \
	basename.3 \
	bcmp.3 \
	bcopy.3 \
	bindresvport.3 \
	bsearch.3 \
	bstring.3 \
	btowc.3 \
	btree.3 \
	byteorder.3 \
	bzero.3 \
	calloc.3 \
	catclose.3 \
	catgets.3 \
	catopen.3 \
	cbrt.3 \
	ceil.3 \
	ceilf.3 \
	ceill.3 \
	cfgetispeed.3 \
	cfgetospeed.3 \
	cfmakeraw.3 \
	cfsetispeed.3 \
	cfsetospeed.3 \
	clearenv.3 \
	clearerr.3 \
	clearerr_unlocked.3 \
	clock.3 \
	closedir.3 \
	closelog.3 \
	cmsg.3 \
	CMSG_ALIGN.3 \
	CMSG_FIRSTHDR.3 \
	CMSG_NXTHDR.3 \
	CMSG_SPACE.3 \
	confstr.3 \
	copysign.3 \
	copysignf.3 \
	copysignl.3 \
	cos.3 \
	cosf.3 \
	cosh.3 \
	coshf.3 \
	coshl.3 \
	cosl.3 \
	crypt.3 \
	ctermid.3 \
	ctime.3 \
	cuserid.3 \
	daemon.3 \
	db.3 \
	dbopen.3 \
	difftime.3 \
	dirname.3 \
	div.3 \
	dlclose.3 \
	dlerror.3 \
	dlopen.3 \
	dlsym.3 \
	dn_comp.3 \
	dn_expand.3 \
	drand48.3 \
	drem.3 \
	dysize.3 \
	ecvt.3 \
	encrypt.3 \
	endgrent.3 \
	endhostent.3 \
	endmntent.3 \
	endnetent.3 \
	endprotoent.3 \
	endpwent.3 \
	endrpcent.3 \
	endservent.3 \
	endusershell.3 \
	endutent.3 \
	erand48.3 \
	erf.3 \
	erfc.3 \
	errno.3 \
	exec.3 \
	execl.3 \
	execle.3 \
	execlp.3 \
	execv.3 \
	execvp.3 \
	exit.3 \
	exp.3 \
	expm1.3 \
	fabs.3 \
	fabsf.3 \
	fabsl.3 \
	fclose.3 \
	fcloseall.3 \
	fcvt.3 \
	fdopen.3 \
	feclearexcept.3 \
	fegetenv.3 \
	fegetexceptflag.3 \
	fegetround.3 \
	feholdexcept.3 \
	fenv.3 \
	feof.3 \
	feof_unlocked.3 \
	feraiseexcept.3 \
	ferror.3 \
	ferror_unlocked.3 \
	fesetenv.3 \
	fesetexceptflag.3 \
	fesetround.3 \
	fetestexcept.3 \
	feupdateenv.3 \
	fflush.3 \
	fflush_unlocked.3 \
	ffs.3 \
	fgetc.3 \
	fgetc_unlocked.3 \
	fgetgrent.3 \
	fgetpos.3 \
	fgetpwent.3 \
	fgets.3 \
	fgets_unlocked.3 \
	fgetwc.3 \
	fgetwc_unlocked.3 \
	fgetws.3 \
	fgetws_unlocked.3 \
	fileno.3 \
	fileno_unlocked.3 \
	finite.3 \
	flockfile.3 \
	floor.3 \
	floorf.3 \
	floorl.3 \
	fmod.3 \
	fnmatch.3 \
	fopen.3 \
	fpathconf.3 \
	fputc.3 \
	fputc_unlocked.3 \
	fputs.3 \
	fputs_unlocked.3 \
	fputwc.3 \
	fputwc_unlocked.3 \
	fputws.3 \
	fputws_unlocked.3 \
	fread.3 \
	fread_unlocked.3 \
	free.3 \
	freeaddrinfo.3 \
	freehostent.3 \
	freopen.3 \
	frexp.3 \
	fscanf.3 \
	fseek.3 \
	fseeko.3 \
	fsetpos.3 \
	ftell.3 \
	ftello.3 \
	ftime.3 \
	ftok.3 \
	ftrylockfile.3 \
	funlockfile.3 \
	fwide.3 \
	fwrite.3 \
	fwrite_unlocked.3 \
	gai_strerror.3 \
	gcvt.3 \
	getaddrinfo.3 \
	getc.3 \
	getchar.3 \
	getchar_unlocked.3 \
	getc_unlocked.3 \
	get_current_dir_name.3 \
	getcwd.3 \
	getdate.3 \
	getdate_r.3 \
	getdelim.3 \
	getdirentries.3 \
	getenv.3 \
	getgrent.3 \
	getgrgid.3 \
	getgrnam.3 \
	gethostbyaddr.3 \
	gethostbyname.3 \
	getipnodebyaddr.3 \
	getipnodebyname.3 \
	getline.3 \
	getloadavg.3 \
	getlogin.3 \
	getmntent.3 \
	getnetbyaddr.3 \
	getnetbyname.3 \
	getnetent.3 \
	getpass.3 \
	getprotobyname.3 \
	getprotobynumber.3 \
	getprotoent.3 \
	getpw.3 \
	getpwent.3 \
	getpwnam.3 \
	getpwuid.3 \
	getrpcbyname.3 \
	getrpcbynumber.3 \
	getrpcent.3 \
	getrpcport.3 \
	gets.3 \
	getservbyname.3 \
	getservbyport.3 \
	getservent.3 \
	getusershell.3 \
	getw.3 \
	getwc.3 \
	getwchar.3 \
	getwchar_unlocked.3 \
	getwc_unlocked.3 \
	getwd.3 \
	glob.3 \
	globfree.3 \
	gmtime.3 \
	hasmntopt.3 \
	herror.3 \
	hstrerror.3 \
	htonl.3 \
	htons.3 \
	hypot.3 \
	imaxabs.3 \
	index.3 \
	initstate.3 \
	intro.3 \
	isalnum.3 \
	isalpha.3 \
	isascii.3 \
	isblank.3 \
	iscntrl.3 \
	isdigit.3 \
	isgraph.3 \
	isinf.3 \
	islower.3 \
	isnan.3 \
	isprint.3 \
	ispunct.3 \
	isspace.3 \
	isupper.3 \
	isxdigit.3 \
	j0.3 \
	j0f.3 \
	j0l.3 \
	j1.3 \
	j1f.3 \
	j1l.3 \
	jn.3 \
	jnf.3 \
	jnl.3 \
	jrand48.3 \
	labs.3 \
	lcong48.3 \
	llabs.3 \
	llrint.3 \
	llrintf.3 \
	llrintl.3 \
	llround.3 \
	llroundf.3 \
	llroundl.3 \
	localtime.3 \
	log10.3 \
	log1p.3 \
	log.3 \
	longjmp.3 \
	lrand48.3 \
	lrint.3 \
	lrintf.3 \
	lrintl.3 \
	lround.3 \
	lroundf.3 \
	lroundl.3 \
	malloc.3 \
	MB_CUR_MAX.3 \
	MB_LEN_MAX.3 \
	mbtowc.3 \
	memccpy.3 \
	memchr.3 \
	memcmp.3 \
	memcpy.3 \
	memmove.3 \
	memrchr.3 \
	memset.3 \
	mktime.3 \
	mrand48.3 \
	nan.3 \
	nanf.3 \
	nanl.3 \
	ncurses.3x \
	nearbyint.3 \
	nearbyintf.3 \
	nearbyintl.3 \
	nrand48.3 \
	ntohl.3 \
	ntohs.3 \
	pathconf.3 \
	pclose.3 \
	popen.3 \
	pow.3 \
	putc.3 \
	putchar.3 \
	putchar_unlocked.3 \
	putc_unlocked.3 \
	puts.3 \
	putw.3 \
	putwc.3 \
	putwchar_unlocked.3 \
	putwc_unlocked.3 \
	pw_auth.3 \
	qsort.3 \
	raise.3 \
	rand.3 \
	random.3 \
	realloc.3 \
	re_comp.3 \
	re_exec.3 \
	rewind.3 \
	rindex.3 \
	rint.3 \
	rintf.3 \
	rintl.3 \
	round.3 \
	roundf.3 \
	roundl.3 \
	rquota.3 \
	seed48.3 \
	__setfpucw.3 \
	setgrent.3 \
	sethostent.3 \
	setjmp.3 \
	setkey.3 \
	setmntent.3 \
	setnetent.3 \
	setprotoent.3 \
	setpwent.3 \
	setrpcent.3 \
	setservent.3 \
	setstate.3 \
	setusershell.3 \
	shadow.3 \
	siglongjmp.3 \
	sigsetjmp.3 \
	sin.3 \
	sinf.3 \
	sinh.3 \
	sinhf.3 \
	sinhl.3 \
	sinl.3 \
	sqrt.3 \
	srand.3 \
	srand48.3 \
	srandom.3 \
	stdarg.3 \
	strcat.3 \
	strchr.3 \
	strcpy.3 \
	strcspn.3 \
	strdup.3 \
	strdupa.3 \
	strfry.3 \
	string.3 \
	strlen.3 \
	strncat.3 \
	strncpy.3 \
	strndup.3 \
	strndupa.3 \
	strrchr.3 \
	strsignal.3 \
	strspn.3 \
	strstr.3 \
	strtok.3 \
	strtok_r.3 \
	tan.3 \
	tanf.3 \
	tanh.3 \
	tanhf.3 \
	tanhl.3 \
	tanl.3 \
	tgamma.3 \
	tgammaf.3 \
	tgammal.3 \
	toascii.3 \
	tolower.3 \
	toupper.3 \
	trunc.3 \
	truncf.3 \
	truncl.3 \
	undocumented.3 \
	ungetc.3 \
	unlocked_stdio.3 \
	va_arg.3 \
	va_end.3 \
	va_start.3 \
	wcpcpy.3 \
	wcpncpy.3 \
	wcrtomb.3 \
	wcscasecmp.3 \
	wcscat.3 \
	wcschr.3 \
	wcscpy.3 \
	wcscspn.3 \
	wcsdup.3 \
	wcslen.3 \
	wcsncasecmp.3 \
	wcsncat.3 \
	y0.3 \
	y0f.3 \
	y0l.3 \
	y1.3 \
	y1f.3 \
	y1l.3 \
	yn.3 \
	ynf.3 \
	ynl.3
