
mandir = @mandir@/pl
man_MANS = \
	acct.5 \
	aliases.5 \
	at_acces.5 \
	at_allow.5 \
	at_deny.5 \
	crontab.5 \
	dialups.5 \
	dot-qmail.5 \
	d_passwd.5 \
	environ.5 \
	exports.5 \
	fs.5 \
	fstab.5 \
	ftpusers.5 \
	group.5 \
	initscript.5 \
	inittab.5 \
	intro.5 \
	ipc.5 \
	issue.5 \
	issue.net.5 \
	keymaps.5 \
	keytables.5 \
	lilo.conf.5 \
	limits.5 \
	lisp-tut.5 \
	locale.5 \
	locatedb.5 \
	magic.5 \
	maildir.5 \
	man.config.5 \
	manpath.5 \
	mbox.5 \
	motd.5 \
	mtools.5 \
	nfs.5 \
	nologin.5 \
	pbm.5 \
	pgm.5 \
	pnm.5 \
	porttime.5 \
	ppm.5 \
	printcap.5a \
	proc.5 \
	procmailex.5 \
	procmailrc.5 \
	protocols.5 \
	qmail-control.5 \
	qmail-users.5 \
	resolv.conf.5 \
	resolver.5 \
	rpc.5 \
	securetty.5 \
	services.5 \
	shells.5 \
	suauth.5 \
	terminfo.5 \
	ttytype.5 \
	utmp.5 \
	uuencode.5 \
	virtual.5 \
	wtmp.5
