
mandir = @mandir@/pl
man_MANS = \
	ascii.7 \
	bootparam.7 \
	hier.7 \
	intro.7 \
	ip.7 \
	iso_8859_15.7 \
	iso_8859-15.7 \
	iso-8859-15.7 \
	iso_8859_16.7 \
	iso_8859-16.7 \
	iso-8859-16.7 \
	iso_8859_1.7 \
	iso_8859-1.7 \
	iso-8859-1.7 \
	iso_8859_2.7 \
	iso_8859-2.7 \
	iso-8859-2.7 \
	iso_8859_7.7 \
	iso_8859-7.7 \
	iso-8859-7.7 \
	iso_8859_9.7 \
	iso_8859-9.7 \
	iso-8859-9.7 \
	koi8-r.7 \
	latin1.7 \
	latin10.7 \
	latin2.7 \
	latin5.7 \
	latin9.7 \
	locale.7 \
	mailaddr.7 \
	man.7 \
	me.7 \
	qmail.7 \
	samba.7 \
	signal.7 \
	suffixes.7 \
	term.7 \
	udp.7 \
	unicode.7 \
	units.7 \
	unix.7 \
	utf-8.7 \
	utf8.7 \
	x25.7
